Port session data and task repository to Java 8